# Space-Sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileShaders.sh
.cache/clangd/index/: application.cc.95E9EF40FB9A1246.idx  application.h.19B070091B1BDD13.idx  glad.c.588E397FB40BCEC7.idx  glad.h.6C0F5BB33BEED873.idx  khrplatform.h.0AC5834BDD68FCB6.idx  main.cc.DE8761E5B24213E2.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-a752f0bdbe2169e50060.json  index-2023-07-05T16-05-55-0147.json  target-glad-Debug-a957ed25019fce14b3a3.json  target-main-Debug-1df3d9ca525219ec5a55.json
Debug/src/: Makefile  cmake_install.cmake  main
assets/models/: Spaceship.mtl
include/glad/: glad.h
shaders/: PBR.frag  PBR.vert  skybox.frag  skybox.vert  star.frag  star.vert
shaders/spv/: PBR.frag.spv  PBR.vert.spv  skybox.frag.spv  skybox.vert.spv  star.frag.spv  star.vert.spv
src/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  frameInfo.h  glad.c  input.cpp  input.h  main.cc  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  utilities.h
src/vulkan/: buffer.cpp  buffer.h  cubemap.cpp  cubemap.h  descriptors.cpp  descriptors.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  model.cpp  model.h  pipeline.cpp  pipeline.h  sampler.cpp  sampler.h  skybox.cpp  skybox.h  swapchain.cpp  swapchain.h  uniform.cpp  uniform.h  window.cpp  window.h
